feat: add online-zoo header

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -9,10 +9,38 @@
     <link rel="stylesheet" href="../../assets/styles/normalize.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="script.js">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap" rel="stylesheet">
 </head>
 
 <body>
-
+    <div class="big-container">
+        <section class="hero">
+            <header>
+                <div class="small-container">
+                    <div class="logo">
+                        <a href="#about">
+                            <h1>PetStory <br> Online</h1>
+                        </a>
+                    </div>
+                    <nav>
+                        <ul class="nav">
+                            <li><a href="#about">About</a></li>
+                            <li><a href="#map">Map</a></li>
+                            <li><a href="#zoos">Zoos</a></li>
+                            <li><a href="../donate/index.html">Donate</a></li>
+                            <li><a href="#contact-us">Contact us</a></li>
+                        </ul>
+                    </nav>
+                    <div class="copyright">
+                        <a href="https://www.figma.com/file/jfEFwkXVj1WRq7sUHDr8os/PetStory-online">Designed by
+                            &#169;</a>
+                    </div>
+                </div>
+            </header>
+        </section>
+    </div>
 </body>
 
 </html>
