feat: add online-zoo hero section

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -22,6 +22,7 @@
                     <div class="logo">
                         <a href="#about">
                             <h1>PetStory <br> Online</h1>
+                            <img src="../../assets/images/bamboo.svg" alt="bamboo decoration">
                         </a>
                     </div>
                     <nav>
@@ -39,6 +40,13 @@
                     </div>
                 </div>
             </header>
+            <section class="hero_container small-container">
+                <div class="circle"></div>
+                <div class="hero_content">
+                    <p>Watch your <span class="yellow">favorite</span> animal online</p>
+                    <button type="button" class="btn hero-btn">watсh online</button>
+                </div>
+            </section>
         </section>
     </div>
 </body>
