--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -48,6 +48,68 @@
                 </div>
             </section>
         </section>
+        <section class="backstage flex-two-col">
+            <div>
+                <img src="../../assets/images/backstage-1.jpg" alt="Man in black & white">
+            </div>
+            <div class="right-box">
+                <article>
+                    <h2>The Backstage of the Wilderness World.</h2>
+                    <p>The site was founded on the basis of a volunteer movement to protect and care for animals.</p>
+                    <h3>How it works</h3>
+                    <p>The main goal is to help the animals, as well as the nature reserves and zoos where they are
+                        kept. We
+                        are currently
+                        working on video projects targeting pandas in China, eagles on an island near Los Angeles,
+                        alligators in Florida and
+                        gorillas in the Congo. These have a total of more than 1,500 mammals and reptiles.</p>
+                </article>
+                <img src="../../assets/images/backstage-plant.png" alt="Colorful plants">
+            </div>
+        </section>
+        <section class="pick-and-feed">
+            <div class="pick-and-feed_box">
+                <h2>Pick and feed a friend</h2>
+                <b>We know the animals bring you joy, and in these extraordinary times, we’re glad.</b>
+                <strong>During a time when the COVID-19 epidemic is touching all of our lives, we’re proud and glad that
+                    people
+                    around the world
+                    find joy in PetStory.</strong>
+                <p>Even though the zoo has reopened, we need you now more than ever to help us deal with these problems.
+                    Please consider a
+                    gift to our <a href="../donate/index.html" class="emergency">Emergency Support Fund</a> .</p>
+                <h3>How it works</h3>
+                <div class="grid">
+                    <div>
+                        <div class="white-box">
+                            <img src="../../assets/images/pay.png" alt="Credit card">
+                        </div>
+                        <p>Pay with card</p>
+                    </div>
+                    <div class="grid-arr">
+                        <img src="../../assets/images/vector.svg" alt="arrow vector">
+                    </div>
+                    <div>
+                        <div class="white-box">
+                            <img src="../../assets/images/zoo.png" alt="payment fo zoo icon">
+                        </div>
+                        <p>Payment goes to the zoo</p>
+                    </div>
+                    <div class="grid-arr">
+                        <img src="../../assets/images/vector.svg" alt="arrow vector">
+                    </div>
+                    <div>
+                        <div class="white-box">
+                            <img src="../../assets/images/monkey.png" alt="Monkey with bananas">
+                        </div>
+                        <p>Your favourite animal gets delicious dish</p>
+                    </div>
+                </div>
+                <form action="../donate/index.html" method="get">
+                    <button class="btn">Feed a friend now</button>
+                </form>
+            </div>
+        </section>
     </div>
 </body>
 
