--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -25,7 +25,7 @@
                 </div>
                 <nav aria-label="Main">
                     <ul class="nav">
-                        <li><a href="./index.html#about">About</a></li>
+                        <li><a href="./index.html#about" class="active">About</a></li>
                         <li><a href="#map">Map</a></li>
                         <li><a href="#zoos">Zoos</a></li>
                         <li><a href="../donate/index.html">Donate</a></li>
@@ -468,7 +468,7 @@
                 </div>
                 <nav class=" footer-nav" area-label="Main">
                     <ul class="nav">
-                        <li><a href="./index.html" visited>About</a></li>
+                        <li><a href="./index.html" class="active">About</a></li>
                         <li><a href="#map">Map</a></li>
                         <li><a href="#zoos">Zoos</a></li>
                         <li><a href="#contact-us">Contact us</a></li>
