feat: add donate page pick-and-feed section

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -207,7 +207,7 @@
         </section>
         <section class="pick-and-feed">
             <div class="pick-and-feed_box wrapper">
-                <h2>Pick and feed a friend</h2>
+                <h2 class="pick-and-feed__h2">Pick and feed a friend</h2>
                 <p><b>We know the animals bring you joy, and in these extraordinary times, we’re glad.</b></p>
                 <p class="pick-and-feed__strong"><strong>During a time when the COVID-19 epidemic is touching all of our
                         lives, we’re proud and glad
