--- a/pages/donate/index.html
+++ b/pages/donate/index.html
@@ -13,18 +13,18 @@
 </head>
 
 <body>
-    <header>
+    <header class="donate-header">
         <div class="container">
             <div class="wrapper">
                 <div class="logo">
-                    <a href="./index.html#about">
+                    <a href="../main/index.html">
                         <h1>PetStory <br>online</h1>
                         <img src="../../assets/images/bamboo.svg" alt="bamboo decoration">
                     </a>
                 </div>
                 <nav aria-label="Main">
                     <ul class="nav">
-                        <li><a href="./index.html#about">About</a></li>
+                        <li><a href="../main/index.html">About</a></li>
                         <li><a href="#map">Map</a></li>
                         <li><a href="#zoos">Zoos</a></li>
                         <li><a href="../donate/index.html" class="active">Donate</a></li>
@@ -38,35 +38,157 @@
             </div>
         </div>
     </header>
-    <!-- <main>
+    <main>
         <section class="hero donate-hero">
         </section>
         <section class="pick-and-feed donate-pick-and-feed">
-            <article>
-                <h3 class="pick-and-feed__h3">THE ZOO HAS OFFICIALLY REOPENED BUT WE STILL NEED YOUR HELP!</h3>
-                <p>Even though the Zoo has been able to reopen, we are at a greatly reduced
-                    capacity with educational
-                    programs and public
-                    and private events cancelled or postponed for additional months. We need you now more than ever to
-                    help ensure that we
-                    overcome these challenges. We have been actively raising funds in the community, and we are grateful
-                    for the generosity.
-                    But much more support is still needed, and we need your help! Please consider a gift today – no
-                    matter what size – to
-                    help us sustain our mission.</p>
-            </article>
-            <h3 class="pick-and-feed__h3">Donation Information</h3>
-            <div class="pick-and-feed_box wrapper">
-                <h2>Pick and feed a friend</h2>
-                <p><b>We know the animals bring you joy, and in these extraordinary times, we’re glad.</b></p>
+            <div class="wrapper">
+                <article>
+                    <h3 class="pick-and-feed__h3 donate-pick-and-feed__h3">THE ZOO HAS OFFICIALLY REOPENED BUT WE STILL
+                        NEED
+                        YOUR HELP!</h3>
+                    <p class="donate-pick-and-feed__p">Even though the Zoo has been able to reopen, we are at a greatly
+                        reduced capacity with educational programs and public
+                        and private events cancelled or postponed for additional months.<span class="font-regular"> We
+                            need
+                            you now more than ever to
+                            help ensure that we
+                            overcome these challenges. We have been actively raising funds in the community, and we are
+                            grateful
+                            for the generosity.</span> But much more support is still needed, and we need your help!
+                        Please
+                        consider a gift today – no
+                        matter what size – to
+                        help us sustain our mission.</p>
+                </article>
+                <h3 class="pick-and-feed__h3 donate-pick-and-feed__h3">Donation Information</h3>
+                <div class="donate-pick-and-feed__box pick-and-feed_box wrapper">
+                    <h2 class="donate-pick-and-feed__h2">Pick and feed a friend</h2>
+                    <p class="donate-pick-and-feed__subtitle">We know the animals bring you joy, and in these
+                        extraordinary
+                        times, we’re glad.</p>
+                    <div class="panda-section">
+                        <div class="panda-section__text">
+                            <div class="panda-section__left">
+                                <p class="panda-section__number">4</p>
+                                <p class="panda-section__p">Panda diet for the day.</p>
+                            </div>
+                            <div class="panda-section__x">
+                                &#10005
+                            </div>
+                        </div>
+                        <div class="panda-section__widget">
+                            <img src="../../assets/images/panda_widget.png" alt="Panda image">
+                        </div>
+                    </div>
+                    <div class="amount">
+                        <p class="amount__p">Amount</p>
+                        <div class="amount-range">
+                            <input id="input-amount" type="range">
+                        </div>
+                        <div class="amount-grid">
+                            <ul class="amount-grid__dots">
+                                <li class="amount-grid__dot-frame">
+                                    <input class="amount-grid__dot" type="radio" id="5000" name="amount-dot"
+                                        valule="5000">
+                                    <label class="amount-grid__amounts" for="5000">
+                                        <div class="dollar-icon"></div>
+                                        5000
+                                    </label>
+                                </li>
+                                <li class="amount-grid__dot-frame">
+                                    <input class="amount-grid__dot" type="radio" id="2000" name="amount-dot"
+                                        valule="2000">
+                                    <label class="amount-grid__amounts" for="2000">
+                                        <div class="dollar-icon"></div>
+                                        2000
+                                    </label>
+                                </li>
+                                <li class="amount-grid__dot-frame">
+                                    <input class="amount-grid__dot" type="radio" id="1000" name="amount-dot"
+                                        valule="1000">
+                                    <label class="amount-grid__amounts" for="1000">
+                                        <div class="dollar-icon"></div>
+                                        1000
+                                    </label>
+                                </li>
+                                <li class="amount-grid__dot-frame">
+                                    <input class="amount-grid__dot" type="radio" id="500" name="amount-dot"
+                                        valule="500">
+                                    <label class="amount-grid__amounts" for="500">
+                                        <div class="dollar-icon"></div>
+                                        500
+                                    </label>
+                                </li>
+                                <li class="amount-grid__dot-frame">
+                                    <input class="amount-grid__dot" type="radio" id="250" name="amount-dot"
+                                        valule="250">
+                                    <label class="amount-grid__amounts" for="250">
+                                        <div class="dollar-icon"></div>
+                                        250
+                                    </label>
+                                </li>
+                                <li class="amount-grid__dot-frame">
+                                    <input class="amount-grid__dot" type="radio" id="100" name="amount-dot"
+                                        valule="100">
+                                    <label class="amount-grid__amounts" for="100">
+                                        <div class="dollar-icon"></div>
+                                        100
+                                    </label>
+                                </li>
+                                <li class="amount-grid__dot-frame">
+                                    <input class="amount-grid__dot" type="radio" id="50" name="amount-dot" valule="50">
+                                    <label class="amount-grid__amounts" for="50">
+                                        <div class="dollar-icon"></div>
+                                        50
+                                    </label>
+                                </li>
+                                <li class="amount-grid__dot-frame">
+                                    <input class="amount-grid__dot" type="radio" id="25" name="amount-dot" valule="25">
+                                    <label class="amount-grid__amounts" for="25">
+                                        <div class="dollar-icon"></div>
+                                        25
+                                    </label>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="center">
+                        <div class="another-amount">
+                            <form class="another-amount__form" action="">
+                                <label for="input-another-amount">
+                                    <input id="input-another-amount" type="number" maxlength="4"
+                                        placeholder="Another amount">
+                                </label>
+                            </form>
+                        </div>
+                        <div class="subscription">
+                            <form class="subscription__form" action="#">
+                                <div>
+                                    <input name="subscription-input" id="input-monthly" type="radio">
+                                    <label for="input-monthly">Monthly</label>
+                                </div>
+                                <div>
+                                    <input name="subscription-input" id="input-once" type="radio" checked>
+                                    <label for="input-once">Once</label>
+                                </div>
+                            </form>
+                        </div>
+                        <div>
+                            <button class="btn subscription__btn">Feed a friend now</button>
+                            <p class="subscription__p">Share with your friends on social networks</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
             </div>
         </section>
-    </main> -->
+    </main>
     <footer class="footer">
         <div class="container">
             <div class="wrapper footer__wrapper">
                 <div class="logo footer-logo">
-                    <a href="./index.html">
+                    <a href="../main/index.html">
                         <p class="footer-logo__p">PetStory <br>online</p>
                         <img src="../../assets/images/bamboo.svg" alt="bamboo decoration">
                     </a>
@@ -144,7 +266,7 @@
                 </div>
                 <nav class=" footer-nav" area-label="Main">
                     <ul class="nav">
-                        <li><a href="./index.html#about">About</a></li>
+                        <li><a href="../main/index.html">About</a></li>
                         <li><a href="#map">Map</a></li>
                         <li><a href="#zoos">Zoos</a></li>
                         <li><a href="#contact-us">Contact us</a></li>
@@ -163,6 +285,7 @@
             </div>
         </div>
     </footer>
+    <script src="script.js"></script>
 </body>
 
 </html>
