--- a/pages/donate/index.html
+++ b/pages/donate/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <header class="donate-header">
+    <!-- <header class="donate-header">
         <div class="container">
             <div class="wrapper">
                 <div class="logo">
@@ -34,6 +34,39 @@
                 <div class="copyright">
                     <a href="https://www.figma.com/file/jfEFwkXVj1WRq7sUHDr8os/PetStory-online">Designed by
                         &#169;</a>
+                </div>
+            </div>
+        </div>
+    </header> -->
+    <header class="header">
+        <div class="container">
+            <div class="wrapper header__wrapper">
+                <div class="logo">
+                    <a href="..main/index.html">
+                        <h1 class="logo__text">PetStory <br>online</h1>
+                    </a>
+                </div>
+                <nav aria-label="Main">
+                    <ul class="nav header__nav">
+                        <li><a href="../main/index.html" class="active">About</a></li>
+                        <li><a href="#map">Map</a></li>
+                        <li><a href="#zoos">Zoos</a></li>
+                        <li><a href="./index.html">Donate</a></li>
+                        <li><a href="#contact-us">Contact us</a></li>
+                    </ul>
+                </nav>
+                <div class="header__copyright">
+                    <a href="https://www.figma.com/file/jfEFwkXVj1WRq7sUHDr8os/PetStory-online">Designed by
+                        &#169;</a>
+                </div>
+                <div class="header__menu">
+                    <button class="burger-menu" aria-expanded="false">
+                        <svg class="burger" viewBox="0 0 18 10" height="10">
+                            <rect class="line top" width="18" height="2" x="0" y="0" rx="2"></rect>
+                            <rect class="line middle" width="18" height="2" x="0" y="4" rx="2"></rect>
+                            <rect class="line bottom" width="18" height="2" x="0" y="8" rx="2"></rect>
+                        </svg>
+                    </button>
                 </div>
             </div>
         </div>
@@ -286,6 +319,7 @@
         </div>
     </footer>
     <script src="script.js"></script>
+    <script src="../main/script.js"></script>
 </body>
 
 </html>
