--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PetStory online/About</title>
+    <title>PetStory online</title>
     <link rel="stylesheet" href="../../assets/styles/normalize.css">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,17 +14,16 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <div class="container">
-            <div class="wrapper">
+            <div class="wrapper header__wrapper">
                 <div class="logo">
                     <a href="./index.html#about">
-                        <h1>PetStory <br>online</h1>
-                        <img src="../../assets/images/bamboo.svg" alt="bamboo decoration">
+                        <h1 class="logo__text">PetStory <br>online</h1>
                     </a>
                 </div>
                 <nav aria-label="Main">
-                    <ul class="nav">
+                    <ul class="nav header__nav">
                         <li><a href="./index.html#about" class="active">About</a></li>
                         <li><a href="#map">Map</a></li>
                         <li><a href="#zoos">Zoos</a></li>
@@ -32,9 +31,18 @@
                         <li><a href="#contact-us">Contact us</a></li>
                     </ul>
                 </nav>
-                <div class="copyright">
+                <div class="header__copyright">
                     <a href="https://www.figma.com/file/jfEFwkXVj1WRq7sUHDr8os/PetStory-online">Designed by
                         &#169;</a>
+                </div>
+                <div class="header__menu">
+                    <button class="burger-menu" aria-expanded="false">
+                        <svg class="burger" viewBox="0 0 18 10" height="10">
+                            <rect class="line top" width="18" height="2" x="0" y="0" rx="2"></rect>
+                            <rect class="line middle" width="18" height="2" x="0" y="4" rx="2"></rect>
+                            <rect class="line bottom" width="18" height="2" x="0" y="8" rx="2"></rect>
+                        </svg>
+                    </button>
                 </div>
             </div>
         </div>
@@ -42,29 +50,32 @@
     <main>
         <section class="hero">
             <div class="container">
-                <div class="wrapper">
-                    <div class="circle"></div>
-                    <div class="hero_content">
-                        <p>Watch your <span class="yellow">favorite</span> animal online</p>
+                <div class="wrapper hero__wrapper">
+                    <div class="circle hero__circle"></div>
+                    <div class="hero__content">
+                        <p class="hero__p">Watch your <span class="yellow">favorite</span> animal online</p>
+                    </div>
+                    <div class="hero-btn__wrapper">
                         <button type="button" class="btn hero-btn">watсh online</button>
                     </div>
                 </div>
             </div>
         </section>
         <section class="backstage">
-            <div class="container">
-                <div class="plant"></div>
-                <div class="wrapper flex-two-col">
-                    <div>
-                        <img src="../../assets/images/backstage-1.jpg" alt="Man in black & white">
+            <div class="container backstage__container">
+                <div class="backstage__plant"></div>
+                <div class="wrapper backstage__wrapper">
+                    <div class="backstage__img-wrapper">
+                        <img class="backstage__img" src="../../assets/images/backstage-1.jpg"
+                            alt="Man in black & white">
                     </div>
                     <div class="right-box">
-                        <article>
-                            <h2>The Backstage of the Wilderness World.</h2>
+                        <article class="backstage__article">
+                            <h2 class="backstage__h2">The Backstage of the Wilderness World.</h2>
                             <p>The site was founded on the basis of a volunteer movement to protect and care for
                                 animals.
                             </p>
-                            <h3>How it works</h3>
+                            <h3 class="backstage__h3">How it works</h3>
                             <p>The main goal is to help the animals, as well as the nature reserves and zoos where they
                                 are
                                 kept. We
@@ -74,14 +85,13 @@
                                 alligators in Florida and
                                 gorillas in the Congo. These have a total of more than 1,500 mammals and reptiles.</p>
                         </article>
-                        <!-- <img src="../../assets/images/backstage-plant.png" alt="Colorful plants"> -->
                     </div>
                 </div>
             </div>
         </section>
         <section class="pets">
-            <div class="container pets-container">
-                <div class="wrapper">
+            <div class="container pets__container">
+                <div class="wrapper pets__wrapper">
                     <div class="pets-gallery">
                         <div class="pets-arrows">
                             <div class="arrow-wrapper">
@@ -205,7 +215,7 @@
                 </div>
             </div>
         </section>
-        <section class="pick-and-feed">
+        <!-- <section class="pick-and-feed">
             <div class="pick-and-feed_box wrapper">
                 <h2 class="pick-and-feed__h2">Pick and feed a friend</h2>
                 <p><b>We know the animals bring you joy, and in these extraordinary times, we’re glad.</b></p>
@@ -385,9 +395,9 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="container">
             <div class="wrapper footer__wrapper">
                 <div class="logo footer-logo">
@@ -486,7 +496,7 @@
                 </div>
             </div>
         </div>
-    </footer>
+    </footer> -->
     <script src="script.js"></script>
 </body>
 
