feat: add pick-and-feed section responsive

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -215,7 +215,7 @@
                 </div>
             </div>
         </section>
-        <!-- <section class="pick-and-feed">
+        <section class="pick-and-feed">
             <div class="pick-and-feed_box wrapper">
                 <h2 class="pick-and-feed__h2">Pick and feed a friend</h2>
                 <p><b>We know the animals bring you joy, and in these extraordinary times, we’re glad.</b></p>
@@ -225,35 +225,35 @@
                         people
                         around the world
                         find joy in PetStory.</strong></p>
-                <p class="peak-and-feed__p">Even though the zoo has reopened, we need you now more than ever to help us
+                <p class="pick-and-feed__p">Even though the zoo has reopened, we need you now more than ever to help us
                     deal with these problems.
                     Please consider a
                     gift to our <a href="../donate/index.html" class="emergency">Emergency Support Fund</a> .</p>
                 <h3 class="pick-and-feed__h3">How it works</h3>
-                <div class="grid">
-                    <div>
+                <div class="howitworks-grid">
+                    <div class="howitworks__item">
                         <div class="white-box">
                             <img src="../../assets/images/pay.png" alt="Credit card">
                         </div>
-                        <p>Pay with card</p>
+                        <p class="howitworks__p">Pay with card</p>
                     </div>
-                    <div class="grid-arr">
+                    <div class="grid-arr howitworks__item">
                         <img src="../../assets/images/vector.svg" alt="arrow vector">
                     </div>
-                    <div>
+                    <div class="howitworks__item">
                         <div class="white-box">
                             <img src="../../assets/images/zoo.png" alt="payment fo zoo icon">
                         </div>
-                        <p>Payment goes to the zoo</p>
+                        <p class="howitworks__p">Payment goes to the zoo</p>
                     </div>
-                    <div class="grid-arr">
+                    <div class="grid-arr howitworks__item">
                         <img src="../../assets/images/vector.svg" alt="arrow vector">
                     </div>
-                    <div>
+                    <div class="howitworks__item">
                         <div class="white-box">
                             <img src="../../assets/images/monkey.png" alt="Monkey with bananas">
                         </div>
-                        <p>Your favourite animal <br>gets delicious dish</p>
+                        <p class="howitworks__p">Your favourite animal <br>gets delicious dish</p>
                     </div>
                 </div>
                 <div class="btn-donate-frame">
@@ -395,7 +395,7 @@
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section>
     </main>
     <!-- <footer class="footer">
         <div class="container">
