fix: fix main page responsive

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -264,9 +264,9 @@
             </div>
         </section>
         <section class="testimonials">
-            <div class="container">
-                <div class="wrapper">
-                    <h3>Testimonials</h3>
+            <div class="container testimonials__container">
+                <div class="wrapper testimonials__wrapper">
+                    <h3 class="testimonials__h3">Testimonials</h3>
                     <div class="card-container">
                         <div class="card-box">
                             <div class="card">
@@ -278,7 +278,7 @@
                                         </p>
                                     </div>
                                 </div>
-                                <p class="card-p">
+                                <p class="card__p">
                                     The best online zoo I’ve met. My son delighted very much ljves to watch gouillas.
                                     Online
                                     zoo
@@ -312,7 +312,7 @@
                                         </p>
                                     </div>
                                 </div>
-                                <p class="card-p">Online zoo is one jf the ways to instill a love for animals.The best
+                                <p class="card__p">Online zoo is one jf the ways to instill a love for animals.The best
                                     online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo
                                     is one jf the ways to instill a love for animals.
                                     The best online zoo I’ve met. My son delighted very much ljves to watch
@@ -321,10 +321,11 @@
                                     Online zoo is one jf the ways to
                                     instill a love for animals.The best online zoo I’ve met. My son delighted very much
                                     ljves to watch gouillas. Online zoo
-                                    is one jf the ways to instill a love for animals.
+                                    is one jf the ways to instill a love for animals.<br><br>
                                     The best online zoo I’ve met. My son delighted very much ljves to watch gouillas.
                                     Online zoo is one jf the ways to
-                                    instill a love for animals.The best online zoo I’ve met. My son delighted very much
+                                    instill a love for animals.The best online zoo I’ve met. My son delighted very
+                                    much
                                     ljves to watch gouillas. Online zoo
                                     is one jf the ways to instill a love for animals.
 
@@ -343,7 +344,7 @@
                                         </p>
                                     </div>
                                 </div>
-                                <p class="card-p">The best online zoo I’ve met. My son delighted very much ljves to
+                                <p class="card__p">The best online zoo I’ve met. My son delighted very much ljves to
                                     watch gouillas. Online zoo is one jf the ways to
                                     instill a love for animals.The best online zoo I’ve met. My son delighted very much
                                     ljves to watch gouillas. Online zoo
@@ -370,7 +371,7 @@
                                         </p>
                                     </div>
                                 </div>
-                                <p class="card-p">My son delighted very much ljves to watch gouillas. Online zoo is one
+                                <p class="card__p">My son delighted very much ljves to watch gouillas. Online zoo is one
                                     jf the ways to instill a love for animals.The best
                                     online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo
                                     is one jf the ways to instill a love
@@ -397,13 +398,12 @@
             </div>
         </section>
     </main>
-    <!-- <footer class="footer">
+    <footer class="footer">
         <div class="container">
             <div class="wrapper footer__wrapper">
                 <div class="logo footer-logo">
                     <a href="./index.html">
-                        <p class="footer-logo__p">PetStory <br>online</p>
-                        <img src="../../assets/images/bamboo.svg" alt="bamboo decoration">
+                        <p class="footer-logo__p">PetStory online</p>
                     </a>
                 </div>
                 <div class="submit-form">
@@ -496,7 +496,7 @@
                 </div>
             </div>
         </div>
-    </footer> -->
+    </footer>
     <script src="script.js"></script>
 </body>
 
